--- a/_mdx/projects/devops/auto-detect-vulnerabilites-ci.mdx
+++ b/_mdx/projects/devops/auto-detect-vulnerabilites-ci.mdx
@@ -3,7 +3,7 @@ title: Create a CI Plugin for Detecting Vulnerable Dependencies
 tags: CI plugin, vulnerability detection, pull requests
 description: Build a CI plugin that automatically detects vulnerable dependencies in projects and raises pull requests to the repository to rectify them
 expertise: advanced
-thumbId: l1Nc5bHN5Bc
+thumbId: 842ofHC6MaI
 ---
 
 In this project, we will be creating a CI plugin that automatically detects vulnerable dependencies in projects and raises pull requests to the repository to rectify them. This can help ensure that projects are using secure and up-to-date dependencies, reducing the risk of vulnerabilities and exploits.
